--- a/src/jade/article.jade
+++ b/src/jade/article.jade
@@ -12,60 +12,60 @@ block main
 						a.breadcrumbs__link.breadcrumbs__link_active(href="#") Название новости
 			.article__title-wrap
 				h1.h1
-					| Название новости или статьи 
+					| Название новости или статьи
 		.article__banner-wrap
-			h1.h1 
+			h1.h1
 				| контент для баннера
 		.container-inner
 			.article__content-wrap
 				p
-					| И дейные соображения высшего порядка, 
-					| а также сложившаяся структура организации 
-					| играет важную роль в формировании модели развития. 
-					| Значимость этих проблем настолько очевидна, что 
-					| новая модель организационной. 
-					| Идейные соображения высшего порядка, а также 
-					| сложившаяся структура организации играет 
-					| важную роль в формировании модели развития. 				
+					| И дейные соображения высшего порядка,
+					| а также сложившаяся структура организации
+					| играет важную роль в формировании модели развития.
+					| Значимость этих проблем настолько очевидна, что
+					| новая модель организационной.
+					| Идейные соображения высшего порядка, а также
+					| сложившаяся структура организации играет
+					| важную роль в формировании модели развития.
 				p
-					| Повседневная практика показывает, что рамки и 
-					| место обучения кадров в значительной степени 
-					| обуславливает создание дальнейших направлений 
-					| развития. Не следует, однако забывать, что 
-					| постоянное информационно-пропагандистское 
-					| обеспечение нашей деятельности способствует 
-					| подготовки и реализации дальнейших направлений 
-					| развития. Значимость этих проблем настолько 
-					| очевидна, что новая модель организационной 
-					| еятельности обеспечивает широкому кругу 
-					| (специалистов) участие в формировании 
-					| существенных финансовых и административных 
-					| условий. Повседневная практика показывает, 
-					| что постоянный количественный рост и 
-					| сфера нашей активности позволяет оценить значение 
+					| Повседневная практика показывает, что рамки и
+					| место обучения кадров в значительной степени
+					| обуславливает создание дальнейших направлений
+					| развития. Не следует, однако забывать, что
+					| постоянное информационно-пропагандистское
+					| обеспечение нашей деятельности способствует
+					| подготовки и реализации дальнейших направлений
+					| развития. Значимость этих проблем настолько
+					| очевидна, что новая модель организационной
+					| еятельности обеспечивает широкому кругу
+					| (специалистов) участие в формировании
+					| существенных финансовых и административных
+					| условий. Повседневная практика показывает,
+					| что постоянный количественный рост и
+					| сфера нашей активности позволяет оценить значение
 					| новых предложений.
-					| Повседневная практика показывает, 
-					| что реализация намеченных плановых заданий 
-					| требуют определения и уточнения модели развития. 
+					| Повседневная практика показывает,
+					| что реализация намеченных плановых заданий
+					| требуют определения и уточнения модели развития.
 				p
-					| Повседневная практика показывает, что реализация 
-					| намеченных плановых заданий требуют определения и 
-					| уточнения модели развития. Товарищи! постоянное 
-					| информационно-пропагандистское обеспечение нашей 
-					| деятельности в значительной степени обуславливает 
-					| создание позиций, занимаемых участниками в отношении 
-					| поставленных задач. Повседневная практика показывает, 
-					| что консультация с широким активом представляет собой 
-					| интересный эксперимент проверки модели развития. 
-					| Не следует, однако забывать, что начало повседневной 
-					| работы по формированию позиции позволяет оценить 
-					| значение соответствующий условий активизации. С 
-					| другой стороны дальнейшее развитие различных 
-					| форм деятельности позволяет оценить значение 
-					| существенных финансовых и административных условий. 
-					| Задача организации, в особенности же новая модель 
-					| организационной деятельности в значительной степени 
-					| обуславливает создание позиций, занимаемых участниками 
+					| Повседневная практика показывает, что реализация
+					| намеченных плановых заданий требуют определения и
+					| уточнения модели развития. Товарищи! постоянное
+					| информационно-пропагандистское обеспечение нашей
+					| деятельности в значительной степени обуславливает
+					| создание позиций, занимаемых участниками в отношении
+					| поставленных задач. Повседневная практика показывает,
+					| что консультация с широким активом представляет собой
+					| интересный эксперимент проверки модели развития.
+					| Не следует, однако забывать, что начало повседневной
+					| работы по формированию позиции позволяет оценить
+					| значение соответствующий условий активизации. С
+					| другой стороны дальнейшее развитие различных
+					| форм деятельности позволяет оценить значение
+					| существенных финансовых и административных условий.
+					| Задача организации, в особенности же новая модель
+					| организационной деятельности в значительной степени
+					| обуславливает создание позиций, занимаемых участниками
 					| в отношении поставленных задач.
 			.article__gallery-wrap
 				.article__gallery-item
@@ -73,79 +73,79 @@ block main
 				.article__gallery-item
 			.article__gallery-dscr
 				P
-					| Повседневная практика показывает, 
-					| что реализация намеченных плановых 
-					| заданий требуют определения и 
-					| уточнения модели развития. Товарищи! 
-					| постоянное информационно-пропагандистское 
-					| обеспечение нашей деятельности в 
-					| значительной степени обуславливает 
-					| создание позиций, занимаемых участниками 
-					| в отношении поставленных задач. 
-					| Повседневная практика показывает, 
-					| что консультация с широким активом 
-					| представляет собой интересный эксперимент 
-					| проверки модели развития. Не следует, 
-					| однако забывать, что начало повседневной 
-					| работы по формированию позиции позволяет 
-					| оценить значение соответствующий условий 
-					| активизации. С другой стороны дальнейшее 
-					| развитие различных форм деятельности 
-					| позволяет оценить значение существенных 
-					| финансовых и административных условий. 
-					| Задача организации, в особенности же 
-					| новая модель организационной 
-					| деятельности в значительной степени 
-					| обуславливает создание позиций, занимаемых 
+					| Повседневная практика показывает,
+					| что реализация намеченных плановых
+					| заданий требуют определения и
+					| уточнения модели развития. Товарищи!
+					| постоянное информационно-пропагандистское
+					| обеспечение нашей деятельности в
+					| значительной степени обуславливает
+					| создание позиций, занимаемых участниками
+					| в отношении поставленных задач.
+					| Повседневная практика показывает,
+					| что консультация с широким активом
+					| представляет собой интересный эксперимент
+					| проверки модели развития. Не следует,
+					| однако забывать, что начало повседневной
+					| работы по формированию позиции позволяет
+					| оценить значение соответствующий условий
+					| активизации. С другой стороны дальнейшее
+					| развитие различных форм деятельности
+					| позволяет оценить значение существенных
+					| финансовых и административных условий.
+					| Задача организации, в особенности же
+					| новая модель организационной
+					| деятельности в значительной степени
+					| обуславливает создание позиций, занимаемых
 					| участниками в отношении поставленных задач.
 			.article__content-wrap
 				h2.h2
 					| Пакеты услуг по сертификации
 				p
-						| Повседневная практика показывает, что рамки и 
-						| место обучения кадров в значительной степени 
-						| обуславливает создание дальнейших направлений 
-						| развития. Не следует, однако забывать, что 
-						| постоянное информационно-пропагандистское 
-						| обеспечение нашей деятельности способствует 
-						| подготовки и реализации дальнейших направлений 
-						| развития. Значимость этих проблем настолько 
-						| очевидна, что новая модель организационной 
-						| еятельности обеспечивает широкому кругу 
-						| (специалистов) участие в формировании 
-						| существенных финансовых и административных 
-						| условий. Повседневная практика показывает, 
-						| что постоянный количественный рост и 
-						| сфера нашей активности позволяет оценить значение 
+						| Повседневная практика показывает, что рамки и
+						| место обучения кадров в значительной степени
+						| обуславливает создание дальнейших направлений
+						| развития. Не следует, однако забывать, что
+						| постоянное информационно-пропагандистское
+						| обеспечение нашей деятельности способствует
+						| подготовки и реализации дальнейших направлений
+						| развития. Значимость этих проблем настолько
+						| очевидна, что новая модель организационной
+						| еятельности обеспечивает широкому кругу
+						| (специалистов) участие в формировании
+						| существенных финансовых и административных
+						| условий. Повседневная практика показывает,
+						| что постоянный количественный рост и
+						| сфера нашей активности позволяет оценить значение
 						| новых предложений.
-						| Повседневная практика показывает, 
-						| что реализация намеченных плановых заданий 
-						| требуют определения и уточнения модели развития. 
+						| Повседневная практика показывает,
+						| что реализация намеченных плановых заданий
+						| требуют определения и уточнения модели развития.
 				p
-					| Повседневная практика показывает, что рамки и 
-					| место обучения кадров в значительной степени 
-					| обуславливает создание дальнейших направлений 
-					| развития. Не следует, однако забывать, что 
-					| постоянное информационно-пропагандистское 
-					| обеспечение нашей деятельности способствует 
-					| подготовки и реализации дальнейших направлений 
-					| развития. Значимость этих проблем настолько 
-					| очевидна, что новая модель организационной 
-					| еятельности обеспечивает широкому кругу 
-					| (специалистов) участие в формировании 
-					| существенных финансовых и административных 
-					| условий. Повседневная практика показывает, 
-					| что постоянный количественный рост и 
-					| сфера нашей активности позволяет оценить значение 
+					| Повседневная практика показывает, что рамки и
+					| место обучения кадров в значительной степени
+					| обуславливает создание дальнейших направлений
+					| развития. Не следует, однако забывать, что
+					| постоянное информационно-пропагандистское
+					| обеспечение нашей деятельности способствует
+					| подготовки и реализации дальнейших направлений
+					| развития. Значимость этих проблем настолько
+					| очевидна, что новая модель организационной
+					| еятельности обеспечивает широкому кругу
+					| (специалистов) участие в формировании
+					| существенных финансовых и административных
+					| условий. Повседневная практика показывает,
+					| что постоянный количественный рост и
+					| сфера нашей активности позволяет оценить значение
 					| новых предложений.
-					| Повседневная практика показывает, 
-					| что реализация намеченных плановых заданий 
-					| требуют определения и уточнения модели развития. 
+					| Повседневная практика показывает,
+					| что реализация намеченных плановых заданий
+					| требуют определения и уточнения модели развития.
 			.article__social-wrap
 				span.socail-date
 					| 12.06.2016
-				.pluso(data-background='none;', 
-						data-options='small,square,line,horizontal,nocounter,sepcounter=1,theme=14', 
+				.pluso(data-background='none;',
+						data-options='small,square,line,horizontal,nocounter,sepcounter=1,theme=14',
 						data-services='vkontakte,facebook,twitter')
 		.more__ques-wrap
 			.container
@@ -156,9 +156,9 @@ block main
 					a.ques-btn(href='#') Спросить
 		.article__links-wrap
 			.container
-				a(href="#").arc-prev-link.podrobn-link_pre
+				a(href="#").arc-prev-link.podrobn-link_pre.und
 					| Название предыдщей статьи
-				a(href="#").arc-next-link.podrobn-link
+				a(href="#").arc-next-link.podrobn-link.und
 					| Название следующей статьи
 		.container
 			.article__arcs-wrap
@@ -168,11 +168,11 @@ block main
 					span.arcs-title
 						| Заголовок статьи
 					p.arcs-txt
-						| Идейные соображения высшего порядка, 
-						| а также сложившаяся структура организации 
-						| играет важную роль в формировании модели 
-						| развития. Значимость этих проблем 
-						| настолько очевидна, что новая модель 
+						| Идейные соображения высшего порядка,
+						| а также сложившаяся структура организации
+						| играет важную роль в формировании модели
+						| развития. Значимость этих проблем
+						| настолько очевидна, что новая модель
 						| организационной
 						a(href="#").podrobn-link
 							| ...
@@ -182,11 +182,11 @@ block main
 					span.arcs-title
 						| Заголовок статьи
 					p.arcs-txt
-						| Идейные соображения высшего порядка, 
-						| а также сложившаяся структура организации 
-						| играет важную роль в формировании модели 
-						| развития. Значимость этих проблем 
-						| настолько очевидна, что новая модель 
+						| Идейные соображения высшего порядка,
+						| а также сложившаяся структура организации
+						| играет важную роль в формировании модели
+						| развития. Значимость этих проблем
+						| настолько очевидна, что новая модель
 						| организационной
 						a(href="#").podrobn-link
 							| ...
@@ -196,11 +196,11 @@ block main
 					span.arcs-title
 						| Заголовок статьи
 					p.arcs-txt
-						| Идейные соображения высшего порядка, 
-						| а также сложившаяся структура организации 
-						| играет важную роль в формировании модели 
-						| развития. Значимость этих проблем 
-						| настолько очевидна, что новая модель 
+						| Идейные соображения высшего порядка,
+						| а также сложившаяся структура организации
+						| играет важную роль в формировании модели
+						| развития. Значимость этих проблем
+						| настолько очевидна, что новая модель
 						| организационной
 						a(href="#").podrobn-link
 							| ...
