--- a/src/sass/base/_mixins.scss
+++ b/src/sass/base/_mixins.scss
@@ -5,6 +5,13 @@
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
 }
+@mixin vertical-align-abs {
+    position: absolute;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
 @mixin clearfix {
   *zoom: expression(this.runtimeStyle.zoom="1", this.appendChild(document.createElement("br")).style.cssText="clear:bothfont:0/0 serif");
   *zoom: 1;
