--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -71,7 +71,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-1.svg", alt="Img")
@@ -79,7 +79,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-2.svg", alt="Img")
@@ -87,7 +87,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-3.svg", alt="Img")
@@ -95,7 +95,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-4.svg", alt="Img")
@@ -103,7 +103,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-5.svg", alt="Img")
@@ -111,7 +111,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-5.svg", alt="Img")
@@ -119,7 +119,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-5.svg", alt="Img")
@@ -127,7 +127,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-8.svg", alt="Img")
@@ -135,7 +135,7 @@ block main
 					.serv__title
 						h3.h3 Сертификация систем менеджмента качества
 					.serv__descr.small-fonts ХАССП, ГОСТ Р ИСО 9001 - 2015, Интегрированные cистемы менеджмента
-					a(href="#").more-links.link-btn.podrobn-link
+					a(href="#").more-links.link-btn.podrobn-link.und
 						span Подробнее
 					.serv__icon
 						img(src="img/icons/iso-9.svg", alt="Img")
