--- a/src/sass/layout/_company.scss
+++ b/src/sass/layout/_company.scss
@@ -2,7 +2,7 @@
     font-family: 'ubuntulight';
 	@include font-size(14px);
 	margin-bottom: 31px;
-	padding-top: 18px;
+	padding-top: 50px;
 
 	.breadcrumbs__list{
 		display: inline-block;
@@ -31,7 +31,6 @@
 	}
 }
 .about-company-title{
-	padding-top: 32px;
 	background: #fff;
 }
 
@@ -60,7 +59,7 @@
 			margin-right: 0;
 		}
 		&:hover {
-			color: #2e715f;
+			color: #019875;
 		}
 		a {
 			padding: 14px 0;
@@ -81,61 +80,48 @@
 		position: relative;
 		z-index: 2;
 		@include clearfix;
-		padding: 45px 15px;
-		display: table;
+		padding: 0 15px;
+
 	}
 	.accred-sertif{
-		display: table-cell;
+		display: block;
+		float: left;
 		width: 50%;
-		padding: 0 15px;
+		padding: 45px 15px;
 	}
 	.accred-text-wrap{
-		display: table-cell;
+		display: block;
+		float: right;
 		width: 50%;
-		padding: 0 15px 0 30px;
-
+		padding: 45px 15px 45px 30px;
 	}
 	&__title {
 		text-align: center;
 	}
+}
 
-}
-.accred-text-wrap,
 .accred-sertif{
-	@include clearfix;
-}
-.accred-text-wrap,
-.accred-sertif{
+	position: relative;
 		&:before{
-			@include transition(.25s);
-		}
-		&:hover:before{
 			position: absolute;
 			content: '';
 			display: block;
-			width: 100%;
+			width: 350%;
 			top:0;
+			left: -250%;
 			bottom: 0;
 			background: #e9fcf2;
 			-webkit-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			-moz-box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			box-shadow: 0px 6px 5px -2px rgba(202,204,207,1);
 			z-index:-2;
-	}
-}
-.accred-sertif{
-	&:hover:before{
-		left: -50%;
+			@include border-radius(5px);
 	}
 }
 .accred-text-wrap{
-	&:hover:before{
-			right: -50%;
-	}
 	p{
 		margin-bottom: 28px;
 	}
-
 }
 
 .sertif-wrap{
