--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -38,28 +38,28 @@ block main
 					.shema__blocks-container
 						ul.shema__list
 							li.shema__item
-								a(href="#").shema__link.shema__img.img-number-1
-									.img-wrap
+								a(href="#").shema__link.shema__img
+									.img-wrap.img-number-1
 										img(src="img/icons/step-1.svg", alt="Shema")
 									.shema__descr Ваша заявка на получение сертификата
 							li.shema__item.shema__item_bottom
-								a(href="#").shema__link.shema__img.img-number-2
-									.img-wrap
+								a(href="#").shema__link.shema__img
+									.img-wrap.img-number-2
 										img(src="img/icons/step-2.svg", alt="Shema")
 									.shema__descr Согласование деталей
 							li.shema__item
-								a(href="#").shema__link.shema__img.img-number-3
-									.img-wrap
+								a(href="#").shema__link.shema__img
+									.img-wrap.img-number-3
 										img(src="img/icons/step-3.svg", alt="Shema")
 									.shema__descr Оплата счета за предоставяемые услуги
 							li.shema__item.shema__item_bottom
-								a(href="#").shema__link.shema__img.img-number-4
-									.img-wrap
+								a(href="#").shema__link.shema__img
+									.img-wrap.img-number-4
 										img(src="img/icons/step-4.svg", alt="Shema")
 									.shema__descr Оформление документации
 							li.shema__item
-								a(href="#").shema__link.shema__img.img-number-5
-									.img-wrap
+								a(href="#").shema__link.shema__img
+									.img-wrap.img-number-5
 										img(src="img/icons/step-5.svg", alt="Shema")
 									.shema__descr Получение результата
 	.container-inner
