--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -196,79 +196,79 @@ block main
 							.img-item
 								img(src="img/icons/slide-item.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-4.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-5.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-6.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-7.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-8.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-9.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-10.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-11.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-12.png", alt="")
 					.item
 						.img-wrap
 							.img-item
 								img(src="img/icons/slide-item.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-4.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-5.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-6.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-7.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-8.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-9.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-10.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-11.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-12.png", alt="")
 					.item
 						.img-wrap
 							.img-item
 								img(src="img/icons/slide-item.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-4.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-5.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-6.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-7.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-8.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-9.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-10.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-11.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-12.png", alt="")
 
 
 
