--- a/src/sass/layout/_partners.scss
+++ b/src/sass/layout/_partners.scss
@@ -13,7 +13,7 @@
 	&-wrap{
 		width: 980px;
 		margin: 0 auto;
-		padding: 0 30px;
+		padding-left: 5px;
 	}
 	&-banners{
 		.owl-stage{
@@ -36,17 +36,27 @@
 		}
 		.img-wrap{
 			width: 980px;
+			margin-left: -80px;
 			.img-item{
 				width: 200px !important;
 				height: 80px !important;
 				display: inline-block;
-				margin-bottom: 45px;
+				text-align: center;
+				margin-left: 40px;
+				line-height: 80px;
 				img{
-					margin:0 auto;
 					width: auto;
 					height: auto;
 					max-width: 100%;
 					max-height: 100%;
+					line-height: 80px;
+					vertical-align: middle;
+					display: inline-block;
+					@include opacity(.6);
+					@include transition(.3s);
+					&:hover{
+						@include opacity(1);
+					}
 				}
 			}
 		}
