sidebar animation added

--- a/src/jade/company.jade
+++ b/src/jade/company.jade
@@ -33,6 +33,7 @@ block main
 		.accred
 			.container
 				.accred-sertif
+					.background
 					a.sertif-wrap(href='img/content/accred1.jpg' data-lightbox="accred-gallery").light-b__init
 						img(src='img/content/accred1.jpg')
 					a.sertif-wrap(href='img/content/accred2.jpg' data-lightbox="accred-gallery").light-b__init
