--- a/src/jade/partners_single.jade
+++ b/src/jade/partners_single.jade
@@ -15,7 +15,7 @@ block main
 					.partners-title
 						h1.h1 Название компании
 				p.partners-single__descr Значимость этих проблем настолько очевидна, что укрепление и развитие структуры позволяет оценить значение существенных финансовых и административных условий. Не следует, однако забывать, что консультация с широким активом требуют определения и уточнения новых предложений. Не следует, однако забывать, что консультация с широким активом требуют от нас анализа систем массового участия. Равным образом постоянное информационно-пропагандистское обеспечение нашей деятельности представляет собой интересный эксперимент проверки новых предложений
-				.partners-ul-title Пердоставляемые нами услуги для компании "название компании":
+				.partners-ul-title Прeдоставляемые нами услуги для компании "название компании":
 				ul.partners__list
 					li.partners__item Разработка и реализация стратегии присутствия бренда Юлмарта в социальных сетях, блогах, форумах, основанная на общей маркетинговой стратегии компании: определение целей и ключевых показателей эффективности, оценка результатов, контроль бюджета
 					li.partners__item Ведение существующих групп Юлмарта в соц.сетях
