--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -157,7 +157,7 @@
     line-height: 20px;
     width: 278px;
 	background-color: rgb(249, 249, 250);
-	box-shadow: 0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68);
+	@include box-shadow(0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68));
 
 	.dropped-block__title{
 		padding: 0 20px;
@@ -171,6 +171,7 @@
 .dropped-menu {
 	.dropped-menu__li{
 		position: relative;
+		margin-bottom: 8px;
 		&:last-of-type {
 			margin-bottom: 25px;
 		}
@@ -206,7 +207,7 @@
 		top: 0;
 		width: 287px;
 		background-color: rgb(249, 249, 250);
-		box-shadow: 0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68);
+		@include box-shadow(0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68));
 		&:hover{
 			display: block;
 		}
@@ -216,19 +217,21 @@
 			position: absolute;
 			width: 12px;
 			height: 29px;
-			left: -12px;
+			right: 100%;
 			top: 0;
 			margin-top: 5px;
 			background: url('../img/icons/drop_block_arrow.png') center center no-repeat;
-
 		}
 	}
 }
 
 .inner-drop-menu{
+	@include box-shadow(0px 3px 6.51px 0.49px rgba(67, 74, 84, 0.68));
+	@include border-radius(4px);
 	padding: 20px 0 10px;
 	.inner-drop-menu__li{
 		display: block;
+		margin-bottom: 10px;
 	}
 	.inner-drop-menu__link{
 		display: block;
