chick bag fixed

--- a/src/jade/article.jade
+++ b/src/jade/article.jade
@@ -145,8 +145,9 @@ block main
 				span.socail-date
 					| 12.06.2016
 				.pluso(data-background='none;',
-						data-options='small,square,line,horizontal,nocounter,sepcounter=1,theme=14',
+						data-options='medium,square,line,horizontal,nocounter,sepcounter=1,theme=14',
 						data-services='vkontakte,facebook,twitter')
+
 		.more__ques-wrap
 			.container
 				.more__ques-title
