--- a/src/jade/company.jade
+++ b/src/jade/company.jade
@@ -147,33 +147,33 @@ block main
 					.item
 						.img-wrap
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-4.png", alt="")
 					.item
 						.img-wrap
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-4.png", alt="")
 					.item
 						.img-wrap
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-2.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-3.png", alt="")
 							.img-item
-								img(src="img/icons/slide-item.png", alt="")
+								img(src="img/icons/slide-item-gr-4.png", alt="")
 	.vacancy-block-wrap
 		.container-inner
 			.vacancy__title
