--- a/src/jade/promezhutuslugi.jade
+++ b/src/jade/promezhutuslugi.jade
@@ -50,7 +50,7 @@ block main
 								ul.uslugi__list
 									//- Список услуг
 									li.uslugi__item
-										a(href="#").uslugi__link ХАССП
+										a(href="#").title-uslugi__link ХАССП
 										ul.poduslugi__list
 											//- Список подуслуг
 											li.poduslugi__item
@@ -60,7 +60,7 @@ block main
 											li.poduslugi__item
 												a(href="#").poduslugi__link ГОСТ Р 51705.1-2001 - Системы качества. Управление качеством пищевых продуктов на основе принципов ХАССП Общие требования
 									li.uslugi__item
-										a(href="#").uslugi__link ХАССП
+										a(href="#").title-uslugi__link ХАССП
 										ul.poduslugi__list
 											//- Список подуслуг
 											li.poduslugi__item
