--- a/src/sass/layout/_article.scss
+++ b/src/sass/layout/_article.scss
@@ -71,6 +71,11 @@
 			font-weight: 600;
 			color: #434a54;
 		}
+		.pluso-wrap{
+			div{
+				width: 130px;
+			}
+		}
 	}
 	&__links-wrap{
 		background-color: rgba(233,252,242,0.5);
